# firmitas

./: .gitignore  Dockerfile  README.md  certificates.txt  download_certificates.sh  firmitas.spec  pyproject.toml  tox.ini
.github/workflows/: main.yml
firmitas/: __init__.py  main.py
firmitas/base/: __init__.py  difftool.py  maintool.py
firmitas/conf/: logrdata.py  standard.py
firmitas/unit/: __init__.py  forgejo.py  gopagure.py
test/: __init__.py  conftest.py  test_conf.py  test_etoe.py  test_forgejo.py  test_main.py  test_pagure.py
test/assets/: certlist.yml
test/assets/certificates/: dtfedmsg.stg.crt  fedora-messaging.stg.crt  joystick.stg.crt  nuancier.stg.crt  robosign.stg.crt  waiverdb.stg.crt
test/cassettes/test_etoe/: test_etoe[Invoke notifications by stating an expiry date].yaml  test_etoe[Invoke notifications with accurate password with config].yaml  test_etoe[Invoke notifications with accurate password without config].yaml  test_etoe[Invoke notifications with accurate password].yaml  test_etoe[Invoke notifications with mistaken password with config].yaml  test_etoe[Invoke notifications with mistaken password without config].yaml  test_etoe[Invoke notifications with mistaken password].yaml
