[project]
name = "firmitas"
version = "0.1.5a1"
description = "Simple notification service for X.509-standard TLS certificate statuses"
authors = [
    {name = "Akashdeep Dhar", email = "akashdeep.dhar@gmail.com"}
]
maintainers = [
    {name = "Akashdeep Dhar", email = "akashdeep.dhar@gmail.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["notification", "security", "certificate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Operating System",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "click>=8.0.0,<9",
    "cryptography>=36.0.0",
    "pyyaml>=5.0.0,<7",
    "requests>=2.20.0,<3",
]

[project.urls]
Homepage = "https://gitlab.com/t0xic0der/firmitas/"
Repository = "https://gitlab.com/t0xic0der/firmitas/"
Documentation = "https://gitlab.com/t0xic0der/firmitas/-/blob/main/README.md"

[project.scripts]
firmitas = "firmitas.main:main"

[dependency-groups]
dev = [
    "pytest>=7.1.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.1",
    "responses>=0.25.0",
    "ruff>=0.2.0",
    "tox>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
